org.omg.sysml.xpect.tests/src/org/omg/sysml/xpect/tests/validation/invalid/BlockProperty_invalid.sysml.xt
//* 
XPECT_SETUP org.omg.sysml.xpect.tests.validation.invalid.SysMLInvalidationTests
	ResourceSet {
		ThisFile {}
		File {from ="/library.kernel/Base.kerml"}
		File {from ="/library.kernel/Occurrences.kerml"}
		File {from ="/library.kernel/Objects.kerml"}
		File {from ="/library.kernel/Performances.kerml"}
		File {from ="/library.kernel/ControlPerformances.kerml"}
		File {from ="/library.kernel/TransitionPerformances.kerml"}
		File {from ="/library.kernel/ScalarValues.kerml"}
		File {from ="/library.systems/Items.sysml"}
		File {from ="/library.systems/Parts.sysml"}
		File {from ="/library.systems/Ports.sysml"}
		File {from ="/library.systems/Actions.sysml"}
	}
	Workspace {
		JavaProject {
			SrcFolder {
				ThisFile {}
				File {from ="/library.kernel/Base.kerml"}
				File {from ="/library.kernel/Occurrences.kerml"}
				File {from ="/library.kernel/Objects.kerml"}
				File {from ="/library.kernel/Performances.kerml"}
				File {from ="/library.kernel/ControlPerformances.kerml"}
				File {from ="/library.kernel/TransitionPerformances.kerml"}
				File {from ="/library.kernel/ScalarValues.kerml"}
				File {from ="/library.systems/Items.sysml"}
				File {from ="/library.systems/Parts.sysml"}
				File {from ="/library.systems/Ports.sysml"}
				File {from ="/library.systems/Actions.sysml"}
			}
		}
	}
END_SETUP 
*/
package pkg {
	import ScalarValues::*;
	block A {
		// XPECT errors --> "A part usage must be typed by item definitions and at least one part definition." at "areal: Real;"
		part areal: Real;
		// XPECT errors --> "A part usage must be typed by item definitions and at least one part definition." at "avalue: aValue;"
		part avalue: aValue;
		// XPECT errors --> "A part usage must be typed by item definitions and at least one part definition." at "anaction: anAction;"
		part anaction: anAction;
		/* XPECT errors ---	
		 	"A part usage must be typed by item definitions and at least one part definition." at "aportdef: APortDef;"
		 	"Features must have at least one type" at "aportdef: APortDef;"
		--- */ 
		part aportdef: APortDef;
		/* XPECT errors ---
		 	"A part usage must be typed by item definitions and at least one part definition." at "aport: ABlock::aPort;"
		 	"Features must have at least one type" at "aport: ABlock::aPort;"
		--- */
		part aport: ABlock::aPort;
		/* XPECT errors ---
		 "A part usage must be typed by item definitions and at least one part definition." at "apart: ABlock::aPart;"
		 "Features must have at least one type" at "apart: ABlock::aPart;"
		--- */
		part apart: ABlock::aPart;
		// XPECT errors --> "A part usage must be typed by item definitions and at least one part definition." at "twoTypes: ABlock, APortDef;"
		part twoTypes: ABlock, APortDef;
	}
	value aValue: Real;
	block ABlock {
		port aPort: APortDef;
		part aPart: ABlock;
	}
	activity AnActivity;
	action anAction : AnActivity;
	port def APortDef;
}